2002-07-16  Morten Welinder  <terra@diku.dk>

	* sc-fin.c: Use powgnum, not pow.

2002-07-13  Jody Goldberg <jody@gnome.org>

	* functions.c (gnumeric_price) : silence some warnings.

2002-07-07  Jody Goldberg <jody@gnome.org>

	* sc-fin.c (GetDiffParam) : avoid compiler warnings.
	* functions.c (gnumeric_amordegrc) : ditto.

2002-07-07  Jukka Pekka  <jiivonen@hutcs.cs.hut.fi>

	* functions.c (gnumeric_yield): Fixed.

2002-07-07  Jon K Hellan  <hellan@acm.org>

	* functions.c (annual_year_basis, days_monthly_basis, coupnum):
	Replaced deprecated g_date_xxx with g_data_get_xxx.
	
2002-07-07  Jukka Pekka  <jiivonen@hutcs.cs.hut.fi>

	* functions (gnumeric_cumprinc, gnumeric_cumipmt, gnumeric_mduration):
	Implemented.

	* sc-fin.c (GetRmz,GetZw,Duration,get_cumprinc,get_cumipmt,
	get_mduration): Added.

2002-07-07  Jukka Pekka  <jiivonen@hutcs.cs.hut.fi>

	* functions.c (gnumeric_duration): Renamed DURATION() as
	G_DURATION().  Wrote a new DURATION() that is XL compatible.

	* sc-fin.c (get_duration): Added.

2002-07-06  Jukka Pekka  <jiivonen@hutcs.cs.hut.fi>

	* functions.c (gnumeric_amordegrc, gnumeric_amorlinc,
	gnumeric_oddlprice, gnumeric_oddlyield, gnumeric_yieldmat,
	gnumeric_yielddisc): Implemented. Thanks for OO, read the comment
	in sc-fin.c.

	* sc-fin.[ch], Makefile.am: Added new file.
	
2002-06-14  Jody Goldberg <jody@gnome.org>

	* functions.c (gnumeric_euro) : add drachma.

2002-05-29  Jody Goldberg <jody@gnome.org>

	* Release 1.1.4

2002-05-03  Morten Welinder  <terra@diku.dk>

	* functions.c (gnumeric_xirr): Put sane limits on the goal search.
